k8s/services/ordering.service.hlf.k8s.com.yaml

apiVersion: v1
kind: Service
metadata:
  name: orderer0-hlf-k8s-com
  namespace: hlfk8s
spec:
  type: ClusterIP
  selector:
    component: "orderer0.hlf.k8s.com"
  ports:
  - name: "grpcs"
    port: 7050
    protocol: TCP
    targetPort: 7050
---

apiVersion: v1
kind: Service
metadata:
  name: orderer1-hlf-k8s-com
  namespace: hlfk8s
spec:
  type: ClusterIP
  selector:
    component: "orderer1.hlf.k8s.com"
  ports:
  - name: "grpcs"
    port: 7050
    protocol: TCP
    targetPort: 7050
---

apiVersion: v1
kind: Service
metadata:
  name: orderer2-hlf-k8s-com
  namespace: hlfk8s
spec:
  type: ClusterIP
  selector:
    component: "orderer2.hlf.k8s.com"
  ports:
  - name: "grpcs"
    port: 7050
    protocol: TCP
    targetPort: 7050
---

apiVersion: v1
kind: Service
metadata:
  name: ordering-service-hlf-k8s-com
  namespace: hlfk8s
spec:
  type: ClusterIP
  selector:
    type: orderer
  ports:
  - name: "grpcs"
    port: 7050
    protocol: TCP
    targetPort: 7050
